--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bamazonCustomer.js",
   "dependencies": {
     "cli-table2": "^0.2.0",
+    "cli-table3": "^0.5.1",
     "inquire": "^0.4.8",
     "inquirer": "^7.0.0",
     "msql": "^1.0.3",
